Aggiunta prima parte main

--- a/css/style.css
+++ b/css/style.css
@@ -29,22 +29,15 @@ body{
 
 /* main */
 
+/* prima section di main */
+
 .contenitore-button{
-    /* height: 100px; */
     max-width: 900px;
     margin: auto;
     background-color: white;
     margin-top: 50px;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-}
-
-.contenitore-main{
-    height: 600px;
-    max-width: 900px;
-    margin: auto;
-    background-color: white;
-    margin-top: 3px;
 }
 
 .button-task{
@@ -64,4 +57,33 @@ body{
     padding: 8px;
     color: lightgrey;
     border: 1px solid lightgrey;
+}
+
+/* seconda section di main */
+
+.contenitore-main{
+    /* rimuovere heigt */
+    height: 600px;
+    max-width: 900px;
+    margin: auto;
+    background-color: white;
+    margin-top: 3px;
+}
+
+.contenuto-main{
+    padding-left: 50px;
+    padding-top: 30px;
+    font-family: 'Lato', sans-serif;
+    color: #5B5F66;
+}
+
+
+ul{
+    list-style: none;
+}
+
+.celeste{
+    background-color: #48ADF0;
+    border-radius: 10px;
+    color: white;
 }
