--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
     font-family: 'Lato', sans-serif;
     display: inline-block;
     vertical-align: middle;
+    font-size: 50px;
 }
 
 .logo{
@@ -40,34 +41,36 @@ body{
     border-top-left-radius: 5px;
 }
 
-.button-task{
+.task{
     background-color: #48ADF0;
-    border-radius: 5px;
     color: white;
-    padding: 8px;
-    margin-top: 20px;
     margin-left: 50px;
-    margin-bottom: 10px;
     border: none;
 }
 
-.button-section{
+.section{
     background-color: white;
-    border-radius: 5px;
-    padding: 8px;
     color: lightgrey;
     border: 1px solid lightgrey;
+}
+
+.button{
+    border-radius: 5px;
+    padding: 8px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 /* seconda section di main */
 
 .contenitore-main{
-    /* rimuovere heigt */
     height: 600px;
     max-width: 900px;
     margin: auto;
     background-color: white;
     margin-top: 3px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .sezione{
@@ -100,52 +103,35 @@ ul{
     margin-right: 10px;
 }
 
-.celeste{
-    background-color: #48ADF0;
+.rettangolo{
     border-radius: 10px;
     color: white;
     padding: 7px;
     font-size: 12px;
+}
+
+.celeste{
+    background-color: #48ADF0;
 }
 
 .viola{
     background-color: #9C72E4;
-    border-radius: 10px;
-    color: white;
-    padding: 7px;
-    font-size: 12px;
 }
 
 .verde{
     background-color: #64C0A9;
-    border-radius: 10px;
-    color: white;
-    padding: 7px;
-    font-size: 12px;
 }
 
 .arancione{
     background-color: #F29E33;
-    border-radius: 10px;
-    color: white;
-    padding: 7px;
-    font-size: 12px;
 }
 
 .rosa{
     background-color: #D863A1;
-    border-radius: 10px;
-    color: white;
-    padding: 7px;
-    font-size: 12px;
 }
 
 .verdechiaro{
     background-color: #B2Ca2A;
-    border-radius: 10px;
-    color: white;
-    padding: 7px;
-    font-size: 12px;
 }
 
 li{
