--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body{
 /* header */
 
 .titolo{
-    color #051A34;
     font-family: 'Lato', sans-serif;
     display: inline-block;
     vertical-align: middle;
@@ -26,17 +25,14 @@ body{
     background-color: white;
     height: 80px;
     padding: 10px;
+    margin-bottom: 50px;
 }
 
 /* main */
 
-/* prima section di main */
+/* prima sezione di main */
 
-.contenitore-button{
-    max-width: 900px;
-    margin: auto;
-    background-color: white;
-    margin-top: 50px;
+.button-principale{
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
 }
@@ -44,7 +40,6 @@ body{
 .task{
     background-color: #48ADF0;
     color: white;
-    margin-left: 50px;
     border: none;
 }
 
@@ -63,44 +58,51 @@ body{
 
 /* seconda section di main */
 
-.contenitore-main{
-    height: 600px;
+.contenitore{
     max-width: 900px;
     margin: auto;
     background-color: white;
+    padding-left: 50px;
+}
+
+.main{
+    height: 600px;
     margin-top: 3px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 
 .sezione{
-    padding-left: 50px;
     padding-top: 30px;
     font-family: 'Lato', sans-serif;
     color: #5B5F66;
 }
 
-
 ul{
     list-style: none;
 }
 
-.check{
+li{
+    margin-top: 10px;
+    margin-bottom: 25px;
+}
+
+.spunta{
     color: green;
-    border-radius: 50%;
     border: 1px solid green;
     padding: 2px 4px;
+}
+
+.check{
+    border-radius: 50%;
     font-size: 10px;
     margin-right: 10px;
 }
 
-.check-cross{
+.cross{
     color: red;
-    border-radius: 50%;
     border: 1px solid red;
     padding: 2px 5px;
-    font-size: 10px;
-    margin-right: 10px;
 }
 
 .rettangolo{
@@ -134,7 +136,3 @@ ul{
     background-color: #B2Ca2A;
 }
 
-li{
-    margin-top: 10px;
-    margin-bottom: 25px;
-}
